# fujitake_app_new

./: .gitignore  COMMANDS.md  README.md  pubspec.yaml  release_id.txt  wget-log
.github/workflows/: build.yml
android/: build.gradle  build.gradle.kts  gradle.properties
android/app/: build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  config.h  native-lib.cpp
app_decoded/: AndroidManifest.xml  apktool.yml
app_decoded/assets/dexopt/: baseline.prof  baseline.profm
app_decoded/assets/flutter_assets/: NOTICES.Z
app_decoded/original/: AndroidManifest.xml
app_decoded/res/values-af/: strings.xml
app_decoded/res/values-am/: strings.xml
app_decoded/res/values-ar/: strings.xml
app_decoded/res/values-as/: strings.xml
app_decoded/res/values-az/: strings.xml
app_decoded/res/values-b+sr+Latn/: strings.xml
app_decoded/res/values-be/: strings.xml
app_decoded/res/values-bg/: strings.xml
app_decoded/res/values-bn/: strings.xml
app_decoded/res/values-bs/: strings.xml
app_decoded/res/values-ca/: strings.xml
app_decoded/res/values-cs/: strings.xml
app_decoded/res/values-da/: strings.xml
app_decoded/res/values-de/: strings.xml
app_decoded/res/values-el/: strings.xml
app_decoded/res/values-en-rCA/: strings.xml
app_decoded/res/values-en-rGB/: strings.xml
app_decoded/res/values-en-rIN/: strings.xml
app_decoded/res/values-en-rXC/: strings.xml
app_decoded/res/values-es/: strings.xml
app_decoded/res/values-es-rUS/: strings.xml
app_decoded/res/values-et/: strings.xml
app_decoded/res/values-eu/: strings.xml
app_decoded/res/values-fa/: strings.xml
app_decoded/res/values-fi/: strings.xml
app_decoded/res/values-fr/: strings.xml
app_decoded/res/values-fr-rCA/: strings.xml
app_decoded/res/values-gl/: strings.xml
app_decoded/res/values-gu/: strings.xml
app_decoded/res/values-hi/: strings.xml
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: cache_job_model.dart  favorite_website_model.dart  nas_server_model.dart  prompt_model.dart  user_profile_model.dart
lib/screens/: cache_list_screen.dart  cache_management_screen.dart  compressed_file_viewer_screen.dart  debug_log_screen.dart  debug_screen.dart  father_screen.dart  father_todo_list_screen.dart  favorite_website_registration_screen.dart  favorite_websites_list_screen.dart  image_viewer_screen.dart  local_file_browser_screen.dart  login_screen.dart  nas_file_browser_screen.dart  nas_server_edit_screen.dart  nas_settings_screen.dart  nas_share_list_screen.dart  nas_viewer_screen.dart  prompt_copy_screen.dart  rar_viewer_screen.dart  registration_screen.dart  todo_detail_screen.dart  top_screen.dart  user_profile_screen.dart  video_viewer_screen.dart
lib/services/: cache_downloader_service.dart  cache_path_service.dart  cache_service.dart  database_service.dart  debug_log_service.dart  firestore_service.dart  foreground_task_handler.dart  global_log.dart  log_service.dart  nas_server_service.dart  nas_service.dart  settings_service.dart
lib/utils/: image_utils.dart
lib/widgets/: custom_controls_widget.dart  user_menu_button.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
releases/: app-arm64-v8a-release.apk
test/: login_test.dart  mocks.dart  mocks.mocks.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6115 files in other folders)
